# Riptide

./: .gitignore  CMakeLists.txt  README.md  Riptide.vcxproj  Riptide.vcxproj.filters  scry_moc.props
docs/doxygen/: config  customdoxygen.css  header.html
meta/client/gui/resources/: locations.json
meta/client/logging/: logging.json  logging.unix.json
meta/client/resources/: locations.json
meta/common/resources/: locations.json
meta/core/resources/: locations.json
meta/scry/gui/resources/: fonts.json  icons.json  locations.json
meta/scry/gui/widgets/: startup.json
meta/scry/logging/: logging.json
meta/scry/resources/: locations.json
res/client/: resources.toc
res/common/: images.arccol.0  resources.toc
res/core/: resources.toc
res/scry/: resources.toc
res/scry/gui/: fonts.arccol.0
src/client/: CL_Global.cpp  CL_Global.hpp  CL_Main.cpp  CL_MetaCompiled.hpp  CL_Startup.cpp  CL_Startup.hpp  Logging.cpp  Logging.hpp  MetaCompiled.hpp  RiptideClient.cpp  RiptideClient.hpp  __client.hpp
src/client/__buildsys/: CMakeLists.txt
src/client/gui/: GUI_Global.cpp  GUI_Global.hpp  GUI_Startup.cpp  GUI_Startup.hpp  __gui.hpp
src/client/util/: MetaUtil.cpp  MetaUtil.hpp  __util.hpp
src/common/: __rip.hpp
src/common/__buildsys/: CMakeLists.txt
src/common/base/: RT_Boot.cpp  RT_Boot.hpp  RT_Global.cpp  RT_Global.hpp  RT_MetaCompiled.hpp
src/common/util/: MetaUtil.hpp
src/core/: __rip.hpp
src/core/__buildsys/: CMakeLists.txt
src/core/base/: RT_Boot.cpp  RT_Boot.hpp  RT_Global.cpp  RT_Global.hpp
src/core/util/: MetaUtil.hpp  __util.hpp
src/cpp/riptide/: __riptide.hpp
src/cpp/riptide/sovereign/: __sovereign.hpp
src/meta_qt/: __meta_qt.hpp
src/meta_qt/__buildsys/: CMakeLists.txt
src/meta_qt/core/: Geometry.cpp  Geometry.hpp  Qt.hpp
src/meta_qt/gui/: Font.cpp  Font.hpp
src/riptide/client/: CL_Main.cpp  RiptideClient.cpp  RiptideClient.hpp  _client.hpp
src/riptide/client/_buildsys/: CMakeLists.txt
src/riptide/sovereign/_buildsys/: CMakeLists.txt
src/riptide/sovereign/prototyping/: _prototyping.hpp
src/riptide/sovereign/prototyping/pattern/: HistoricalPatternMatching.cpp  HistoricalPatternMatching.hpp
src/riptide/sovereign/prototyping/patterns/: HistoricalPatternMatching.cpp
src/scry/: Client.cpp  Client.hpp  Main.cpp  __scry.hpp
src/scry/__buildsys/: CMakeLists.txt  moc_SplashScreen.cpp  riptide_client_automoc.cpp
src/scry/base/: SC_Boot.cpp  SC_Boot.hpp  SC_Global.cpp  SC_Global.hpp  SC_Logging.cpp  SC_Logging.hpp  SC_MetaCompiled.hpp
src/scry/common/: SC_Boot.cpp  SC_Boot.hpp  SC_Global.cpp  SC_Global.hpp  SC_Logging.cpp  SC_Logging.hpp  SC_MetaCompiled.hpp
src/scry/gui/: GUI_Boot.cpp  GUI_Boot.hpp  GUI_Global.cpp  GUI_Global.hpp  __gui.hpp
src/scry/gui/logging/: LabelLogger.cpp  LabelLogger.hpp  __logging.hpp
src/scry/gui/startup/: SplashScreen.cpp  SplashScreen.hpp  __startup.hpp
src/scry/util/: Data.cpp  Data.hpp  Font.cpp  Font.hpp  Icon.cpp  Icon.hpp  MetaUtil.cpp  MetaUtil.hpp  __util.hpp
src/sovereign/: __sovereign.hpp
src/sovereign/prototyping/: __prototyping.hpp
src/sovereign/prototyping/patterns/: HistoricalPatternMatching.cpp  HistoricalPatternMatching.hpp
tests/: CMakeLists.txt
tests/functional/: FN_Main.cpp
tests/functional/__buildsys/: CMakeLists.txt
tests/functional/_buildsys/: CMakeLists.txt
tests/functional/sovereign/: FN_SVRN_Historical__TestSuite.cpp
tools/: collate.bash  mem_check_scry.bash  valgrind.supp  w_build.bat
